# Tinymovr-ROS

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  FORMATTING.md  MIGRATION_GUIDE.md  MY_ROBOT_README.md  README.md  RELEASE_NOTES.md  docker-compose.yml  docker_run.sh  format_code.sh  package.xml  tinymovr_ros.xml
.github/workflows/: industrial_ci.yaml
config/: diff_drive_config.yaml  my_robot_config.yaml
include/tinymovr/: can.hpp  comms.hpp  controller.hpp  current.hpp  encoder.hpp  homing.hpp  motor.hpp  position.hpp  scheduler.hpp  stall_detect.hpp  tinymovr.hpp  traj_planner.hpp  velocity.hpp  voltage.hpp  watchdog.hpp
include/tinymovr_ros/: tinymovr_system.hpp
launch/: my_robot.launch.py  tinymovr_diffbot_demo.launch.py
src/: tinymovr_system.cpp  tm_joint_iface.cpp
src/tinymovr/: can.cpp  controller.cpp  current.cpp  encoder.cpp  homing.cpp  motor.cpp  position.cpp  scheduler.cpp  stall_detect.cpp  tinymovr.cpp  traj_planner.cpp  velocity.cpp  voltage.cpp  watchdog.cpp
urdf/: my_robot.urdf.xacro  tinymovr_diffbot.urdf.xacro
