<?xml version="1.0"?>
<package format="3">
  <name>tinymovr_ros</name>
  <version>1.0.0</version>
  <description>ROS 2 hardware interface for Tinymovr motor controllers using SocketCAN</description>

  <maintainer email="ihatz@todo.todo">ihatz</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 Control dependencies -->
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <!-- Message dependencies -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- TF2 for transforms -->
  <depend>tf2_ros</depend>

  <!-- Controllers -->
  <depend>diff_drive_controller</depend>
  <depend>velocity_controllers</depend>
  <depend>position_controllers</depend>
  <depend>effort_controllers</depend>
  <depend>joint_state_broadcaster</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
